--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -31,5 +31,5 @@ jobs:
           REPOSITORY: minecraft-ecs
           IMAGE_TAG: ${{ github.sha }}
         run: |
-          docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
+          docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG container
           docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
