fix: added debug to update DNS lambda and modify GH action to only run on changes to container dir

--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -4,6 +4,11 @@ on:
   push:
     branches:
       - main
+    paths:
+      - 'container/**'
+  pull_request:
+    paths:
+      - 'container/**'
 
 jobs:
   build-and-push:
